bite me on a saturday

--- a/_posts/2025-03-29-VUE 스터디_5장 1.md
+++ b/_posts/2025-03-29-VUE 스터디_5장 1.md
@@ -19,92 +19,104 @@ image:
 
 ## 5.1 이벤트 개요
 - **예시**:
-  ```vue
-  <button @click="alert('클릭됨!')">클릭</button>
-  ```
-  - 클릭 시 경고창을 띄웁니다.
+```vue
+<button @click="alert('클릭됨!')">클릭</button>
+```
+- 클릭 시 경고창을 띄웁니다.
 
 ## 5.2 인라인 이벤트 처리
 - **예시**:
-  ```vue
-  <button @click="count = count + 1">카운트: {{ count }}</button>
-  ```
-  - 버튼 클릭 시 변수 값을 증가시킵니다.
+```vue
+<button @click="count = count + 1">카운트: {{ count }}</button>
+```
+- 버튼 클릭 시 변수 값을 증가시킵니다.
 
 ## 5.3 이벤트 핸들러 메서드
 - **예시**:
-  ```vue
-  <button @click="handleClick">클릭</button>
-  <script>
-  export default {
-    methods: { handleClick() { console.log('클릭!'); } }
+```vue
+<button @click="handleClick">클릭</button>
+<script>
+export default {
+  methods: { 
+    handleClick() { 
+      console.log('클릭!'); 
+    } 
   }
-  </script>
-  ```
-  - 메서드를 호출해 이벤트를 처리합니다.
+}
+</script>
+```
+- 메서드를 호출해 이벤트를 처리합니다.
 
 ## 5.4 이벤트 객체
 - **예시**:
-  ```vue
-  <button @click="showEvent($event)">클릭</button>
-  <script>
-  export default {
-    methods: { showEvent(e) { console.log(e.target); } }
+```vue
+<button @click="showEvent($event)">클릭</button>
+<script>
+export default {
+  methods: { 
+    showEvent(e) { 
+      console.log(e.target); 
+    } 
   }
-  </script>
-  ```
-  - 이벤트 객체로 요소 정보를 가져옵니다.
+}
+</script>
+```
+- 이벤트 객체로 요소 정보를 가져옵니다.
 
 ## 5.5 기본 이벤트
 - **예시**:
-  ```vue
-  <form @submit.prevent="submitForm">제출</form>
-  <script>
-  export default {
-    methods: { submitForm() { console.log('제출됨'); } }
+```vue
+<form @submit.prevent="submitForm">제출</form>
+<script>
+export default {
+  methods: { 
+    submitForm() { 
+      console.log('제출됨'); 
+    } 
   }
-  </script>
-  ```
-  - 기본 동작을 막고 커스텀 로직을 실행합니다.
+}
+</script>
+```
+- 기본 동작을 막고 커스텀 로직을 실행합니다.
 
 ## 5.6 이벤트 전파와 버블링
 - **예시**:
-  ```vue
-  <div @click="log('div')">
-    <button @click.stop="log('button')">클릭</button>
-  </div>
-  ```
-  - `.stop`으로 이벤트 전파를 중단합니다.
+```vue
+<div @click="log('div')">
+  <button @click.stop="log('button')">클릭</button>
+</div>
+```
+- `.stop`으로 이벤트 전파를 중단합니다.
 
 ## 5.7 이벤트 수식어
 
 ### 5.7.1 once 수식어
 - **예시**:
-  ```vue
-  <button @click.once="alert('한 번만!')">클릭</button>
-  ```
-  - 이벤트가 한 번만 실행됩니다.
+```vue
+<button @click.once="alert('한 번만!')">클릭</button>
+```
+- 이벤트가 한 번만 실행됩니다.
 
 ### 5.7.2 키코드 관련 수식어
 - **예시**:
-  ```vue
-  <input @keyup.enter="submit" placeholder="엔터 입력" />
-  ```
-  - 엔터 키 입력 시 동작합니다.
+```vue
+<input @keyup.enter="submit" placeholder="엔터 입력" />
+```
+- 엔터 키 입력 시 동작합니다.
 
 ### 5.7.3 마우스 관련 수식어
 - **예시**:
-  ```vue
-  <button @click.right="alert('오른쪽 클릭!')">클릭</button>
-  ```
-  - 오른쪽 마우스 클릭에 반응합니다.
+```vue
+<button @click.right="alert('오른쪽 클릭!')">클릭</button>
+```
+- 오른쪽 마우스 클릭에 반응합니다.
 
 ### 5.7.4 exact 수식어
 - **예시**:
-  ```vue
-  <button @click.ctrl.exact="alert('Ctrl만!')">클릭</button>
-  ```
-  - 정확히 Ctrl 키만 눌렀을 때 동작합니다.
+```vue
+<button @click.ctrl.exact="alert('Ctrl만!')">클릭</button>
+```
+- 정확히 Ctrl 키만 눌렀을 때 동작합니다.
 
 ## 5.8 마무리
 - Vue의 이벤트 처리는 간단하고 직관적이며, 수식어로 유연성을 더합니다.
