--- a/_posts/2025-03-29-VUE 스터디_4장 1.md
+++ b/_posts/2025-03-29-VUE 스터디_4장 1.md
@@ -20,6 +20,7 @@ image:
 ## 4.1 Vue 인스턴스 개요
 
 - **코드 예시:**
+
 ```vue
 <template>
   <div>{{ greeting }}</div>
@@ -35,11 +36,12 @@ const app = new Vue({
 </script>
 ```
 
-- **설명:** Vue 인스턴스를 생성하여 HTML 요소에 데이터를 연결합니다.
+- **설명:** 여기서 el은 엘레먼트를 의미하며 스크립트 셋업을 통해 내보낸다.
 
 ## 4.2 data 옵션
 
 - **코드 예시:**
+
 ```vue
 <template>
   <div>{{ name }}</div>
@@ -49,18 +51,19 @@ const app = new Vue({
 export default {
   data() {
     return {
-      name: '초급 개발자'
+      name: 'Hello World!'
     }
   }
 }
 </script>
 ```
 
-- **설명:** data 옵션으로 컴포넌트의 반응형 데이터를 정의합니다.
+- **설명:** data를 리턴하면서 템플릿에 해당 데이터를 접근할수있다.
 
 ## 4.3 계산된 속성(Computed Property)
 
 - **코드 예시:**
+
 ```vue
 <template>
   <div>{{ fullName }}</div>
@@ -88,6 +91,7 @@ export default {
 ## 4.4 메서드
 
 - **코드 예시:**
+
 ```vue
 <template>
   <button @click="sayHello">클릭</button>
@@ -104,11 +108,12 @@ export default {
 </script>
 ```
 
-- **설명:** methods로 사용자 이벤트에 반응하는 함수를 정의합니다.
+- **설명:** methods도 export를 통해서 템플릿 내의 사용이 가능하다.
 
 ## 4.5 관찰 속성
 
 - **코드 예시:**
+
 ```vue
 <template>
   <div>{{ countPlusOne }}</div>
@@ -130,11 +135,12 @@ export default {
 </script>
 ```
 
-- **설명:** watch로 데이터 변경을 감지하고 반응합니다.
+- **설명:** watch로 데이터 변경을 감지할 수있다.
 
 ## 4.6 생명주기 메서드
 
 - **코드 예시:**
+
 ```vue
 <template>
   <div>{{ message }}</div>
@@ -154,8 +160,5 @@ export default {
 </script>
 ```
 
-- **설명:** created 훅으로 인스턴스 생성 시 작업을 수행합니다.
+- **설명:** created  속성을 통해서 컴포넌트가 생성되었지만 마운트 되기전에 실행된다. swift에서의 onAppear 과 비슷한 것같다.
 
-## 4.7 마무리
-
-- Vue 인스턴스는 데이터, 계산된 속성, 메서드, 생명주기 등을 통해 동적인 웹 애플리케이션을 쉽게 구축할 수 있습니다.
