--- a/_posts/2025-03-29-VUE 스터디_5장 1.md
+++ b/_posts/2025-03-29-VUE 스터디_5장 1.md
@@ -19,20 +19,23 @@ image:
 
 ## 5.1 이벤트 개요
 - **예시**:
+
 ```vue
 <button @click="alert('클릭됨!')">클릭</button>
 ```
-- 클릭 시 경고창을 띄웁니다.
+- 클릭 할 경우 alert 이벤트를 발생함.
 
 ## 5.2 인라인 이벤트 처리
 - **예시**:
+
 ```vue
 <button @click="count = count + 1">카운트: {{ count }}</button>
 ```
-- 버튼 클릭 시 변수 값을 증가시킵니다.
+- 버튼 클릭 시 변수 count 값 증가
 
 ## 5.3 이벤트 핸들러 메서드
 - **예시**:
+
 ```vue
 <button @click="handleClick">클릭</button>
 <script>
@@ -45,10 +48,11 @@ export default {
 }
 </script>
 ```
-- 메서드를 호출해 이벤트를 처리합니다.
+- 클릭이벤트 발생시에 console.log 
 
 ## 5.4 이벤트 객체
 - **예시**:
+
 ```vue
 <button @click="showEvent($event)">클릭</button>
 <script>
@@ -61,10 +65,12 @@ export default {
 }
 </script>
 ```
-- 이벤트 객체로 요소 정보를 가져옵니다.
+- 이벤트 객체를 설정하여 속성 값인 target을 액세스 할 수 있다.
+- 이벤트 객체에는 e.type e.currentTarget e.clientx e.clinetY 등이 존재한다
 
 ## 5.5 기본 이벤트
 - **예시**:
+
 ```vue
 <form @submit.prevent="submitForm">제출</form>
 <script>
@@ -81,42 +87,44 @@ export default {
 
 ## 5.6 이벤트 전파와 버블링
 - **예시**:
+
 ```vue
 <div @click="log('div')">
   <button @click.stop="log('button')">클릭</button>
 </div>
 ```
-- `.stop`으로 이벤트 전파를 중단합니다.
+- `.stop`으로 버블링을 멈출 수 있다.
 
 ## 5.7 이벤트 수식어
 
 ### 5.7.1 once 수식어
 - **예시**:
+
 ```vue
 <button @click.once="alert('한 번만!')">클릭</button>
 ```
-- 이벤트가 한 번만 실행됩니다.
+- 이벤트가 한 번만 실행
 
 ### 5.7.2 키코드 관련 수식어
 - **예시**:
+
 ```vue
 <input @keyup.enter="submit" placeholder="엔터 입력" />
 ```
-- 엔터 키 입력 시 동작합니다.
+- 엔터 키 입력 시 이벤트 발생
 
 ### 5.7.3 마우스 관련 수식어
 - **예시**:
+
 ```vue
 <button @click.right="alert('오른쪽 클릭!')">클릭</button>
 ```
-- 오른쪽 마우스 클릭에 반응합니다.
+- 우클릭시에 알러트 이벤트 발생
 
 ### 5.7.4 exact 수식어
 - **예시**:
+
 ```vue
 <button @click.ctrl.exact="alert('Ctrl만!')">클릭</button>
 ```
-- 정확히 Ctrl 키만 눌렀을 때 동작합니다.
-
-## 5.8 마무리
-- Vue의 이벤트 처리는 간단하고 직관적이며, 수식어로 유연성을 더합니다.
+- exact 시에는 Ctrl 키만 눌렀을 때 동작
