Altered some you know

--- a/_posts/2025-04-06-VUE-8.md
+++ b/_posts/2025-04-06-VUE-8.md
@@ -1,8 +1,9 @@
 ---
-title: "8장 컴포넌트 심화"
+title: 8장 컴포넌트 심화
 date: 2025-04-06
-tags: []
-author: "이의민"
+tags:
+  - VUE
+author: 이의민
 ---
 
 # 8장 컴포넌트 심화
