--- a/_posts/2025-04-06-VUE-9.md
+++ b/_posts/2025-04-06-VUE-9.md
@@ -1,8 +1,9 @@
 ---
-title: "9장 Composition API"
+title: 9장 Composition API
 date: 2025-04-06
-tags: []
-author: "이의민"
+tags:
+  - VUE
+author: 이의민
 ---
 
 # 9장 Composition API
