--- a/_posts/2025-04-06-VUE-7.md
+++ b/_posts/2025-04-06-VUE-7.md
@@ -1,12 +1,11 @@
 ---
-title: "7장 컴포넌트"
+title: 7장 단일 파일 컴포넌트를 이용한 Vue 애플리케이션 개발
 date: 2025-04-06
-tags: [VUE]
-author: "이의민"
-published: false
+tags:
+  - VUE
+author: 이의민
 ---
 
-```markdown
 # 7장 단일 파일 컴포넌트를 이용한 Vue 애플리케이션 개발
 
 ## 7.1 프로젝트 설정 도구
@@ -235,6 +234,3 @@ emit('remove', 'Task 1')
 ## 7.8 마무리
 
 단일 파일 컴포넌트를 활용하면 Vue 애플리케이션을 효율적으로 개발할 수 있습니다.
-```
-
-위 내용을 `hello.md` 파일에 복사하면 웹사이트에 바로 게시할 수 있습니다. 추가 요청이 있다면 말씀해주세요!
