--- a/_posts/2025-04-06-VUE-8.md
+++ b/_posts/2025-04-06-VUE-8.md
@@ -23,6 +23,7 @@ author: 이의민
 ```
 
 `scoped` 속성은 CSS를 해당 컴포넌트에만 적용되도록 제한합니다.
+공통으로 적용할 것은 main.css 파일에 적용하고 아니면 scope 내에 적용하는 것이 낫다고
 
 ### 8.1.2 CSS 모듈
 
