--- a/_posts/2025-04-06-VUE-7.md
+++ b/_posts/2025-04-06-VUE-7.md
@@ -17,8 +17,7 @@ author: 이의민
 vue create my-project
 ```
 
-Vue CLI는 Vue 프로젝트를 빠르게 설정하는 공식 도구입니다.
-
+Vue CLI는 Vue 프로젝트를 빠르게 설정하는 공식 도구이다. 설치 시 기본 컴포턴트 설치를 권유하여 템플릿 생성에는 용이
 ### 7.1.2 Vite 기반의 도구
 
 ```vue
@@ -26,7 +25,7 @@ Vue CLI는 Vue 프로젝트를 빠르게 설정하는 공식 도구입니다.
 npm create vite@latest my-vite-project -- --template vue
 ```
 
-Vite는 빠르고 현대적인 빌드 도구로 Vue 프로젝트를 설정합니다.
+Vite는 빠르고 현대적인 빌드 도구로 Vue 프로젝트를 설정함. 빠름 엄청
 
 ## 7.2 생성된 프로젝트 구조 살펴보기
 
@@ -39,7 +38,7 @@ import App from './App.vue'
 createApp(App).mount('#app')
 ```
 
-`main.js`는 Vue 애플리케이션의 시작점 역할을 합니다.
+`main.js`는 Vue 애플리케이션의 시작점 역할을 한다. 여기서 css 임포트 하여 전역으로 뿌려줌
 
 ### 7.2.2 단일 파일 컴포넌트 살펴보기
 
@@ -88,7 +87,7 @@ export default {
 </script>
 ```
 
-컴포넌트를 조합하면 재사용 가능한 UI를 구성할 수 있습니다.
+컴포넌트를 조합하면 재사용 가능한 UI를 구성하기 가능. 조립하는 부품이라고 생각하면됨
 
 ## 7.4 속성
 
@@ -230,7 +229,3 @@ emit('remove', 'Task 1')
 ```
 
 이벤트 에미터로 Todo 삭제 기능을 깔끔하게 구현합니다.
-
-## 7.8 마무리
-
-단일 파일 컴포넌트를 활용하면 Vue 애플리케이션을 효율적으로 개발할 수 있습니다.
