ADDED bunch of things

--- a/_posts/2025-04-06-VUE-10.md
+++ b/_posts/2025-04-06-VUE-10.md
@@ -9,7 +9,7 @@ author: "이의민"
 
 ## 10.1 vue-router란?
 
-vue-router는 Vue.js에서 페이지 간 이동을 관리하는 공식 라우팅 라이브러리입니다.
+vue-router는 Vue.js에서 페이지 간 이동을 관리하는 공식 라우팅 라이브러리입니다. 바이트로 깔면 일일이 다 설치해줘야됨. 특히 main.js 에 app.use('router") 인가 안썼다고 두시간 날렸음
 
 ## 10.2 vue-router의 기본 사용법
 
@@ -62,6 +62,161 @@ const routes = [{
 ```
 
 중첩 라우트는 계층적 페이지 구조를 만듭니다.
+# Vue Router에서의 중첩 라우트(Nested Routes) 설명
+
+Vue Router의 중첩 라우트는 URL 경로의 세그먼트와 애플리케이션 UI의 중첩된 구조를 일치시키는 방법입니다. 예를 들어 사용자 프로필 페이지에서 다양한 하위 섹션(게시물, 팔로워, 정보 등)을 가지고 있을 때 유용합니다.
+
+## 기본 개념
+
+중첩 라우트를 사용하면:
+
+- URL의 계층 구조와 컴포넌트의 계층 구조를 일치시킬 수 있습니다
+- 부모 컴포넌트가 유지된 상태에서 자식 컴포넌트만 변경할 수 있습니다
+
+## 예시 코드
+
+### 1. 라우터 설정
+
+```javascript
+import { createRouter, createWebHistory } from 'vue-router'
+import UserLayout from './views/UserLayout.vue'
+import UserProfile from './views/UserProfile.vue'
+import UserPosts from './views/UserPosts.vue'
+import UserFollowers from './views/UserFollowers.vue'
+
+const routes = [
+  {
+    path: '/user/:id',
+    component: UserLayout,
+    children: [
+      // UserLayout 내부의 <router-view>에 렌더링됨
+      { path: '', component: UserProfile }, // /user/:id
+      { path: 'posts', component: UserPosts }, // /user/:id/posts
+      { path: 'followers', component: UserFollowers } // /user/:id/followers
+    ]
+  }
+]
+
+const router = createRouter({
+  history: createWebHistory(),
+  routes
+})
+
+export default router
+```
+
+### 2. 부모 컴포넌트 (UserLayout.vue)
+
+```vue
+<template>
+  <div class="user-container">
+    <header>
+      <h1>사용자 {{ $route.params.id }}</h1>
+      <nav>
+        <router-link :to="`/user/${$route.params.id}`">프로필</router-link>
+        <router-link :to="`/user/${$route.params.id}/posts`">게시물</router-link>
+        <router-link :to="`/user/${$route.params.id}/followers`">팔로워</router-link>
+      </nav>
+    </header>
+    
+    <!-- 자식 라우트 컴포넌트가 여기에 렌더링됨 -->
+    <router-view></router-view>
+  </div>
+</template>
+```
+
+### 3. 자식 컴포넌트 예시 (UserPosts.vue)
+
+```vue
+<template>
+  <div class="user-posts">
+    <h2>사용자 {{ $route.params.id }}의 게시물</h2>
+    <ul>
+      <li v-for="post in posts" :key="post.id">{{ post.title }}</li>
+    </ul>
+  </div>
+</template>
+
+<script>
+export default {
+  data() {
+    return {
+      posts: []
+    }
+  },
+  created() {
+    // 사용자 ID를 기반으로 게시물 데이터를 가져오는 로직
+    this.fetchPosts(this.$route.params.id)
+  },
+  methods: {
+    fetchPosts(userId) {
+      // API 호출 등
+    }
+  }
+}
+</script>
+```
+
+## 작동 방식
+
+1. 사용자가 `/user/123` URL로 접속하면:
+    
+    - `UserLayout` 컴포넌트가 로드됩니다
+    - 기본 자식 라우트인 `UserProfile`이 `<router-view>` 내부에 렌더링됩니다
+2. 사용자가 `/user/123/posts` URL로 이동하면:
+    
+    - `UserLayout` 컴포넌트는 그대로 유지됩니다
+    - `<router-view>` 내부의 컨텐츠만 `UserPosts` 컴포넌트로 교체됩니다
+
+## 더 깊은 중첩
+
+중첩 라우트는 여러 수준으로 깊게 구성할 수도 있습니다:
+
+```javascript
+const routes = [
+  {
+    path: '/user/:id',
+    component: UserLayout,
+    children: [
+      { path: '', component: UserProfile },
+      { 
+        path: 'posts', 
+        component: UserPosts,
+        children: [
+          { path: ':postId', component: PostDetail } // /user/:id/posts/:postId
+        ]
+      }
+    ]
+  }
+]
+```
+
+이러한 구조에서는 `UserPosts` 컴포넌트에도 `<router-view>`를 추가해야 `PostDetail` 컴포넌트가 렌더링됩니다.
+
+## Vue 3에서의 개선사항
+
+Vue 3와 Vue Router 4에서는 Composition API를 사용한 중첩 라우트 처리가 가능합니다:
+
+```javascript
+import { useRoute, useRouter } from 'vue-router'
+
+export default {
+  setup() {
+    const route = useRoute()
+    const router = useRouter()
+    
+    const userId = route.params.id
+    
+    // userId를 사용한 로직
+    
+    return { userId }
+  }
+}
+```
+
+중첩 라우트는 복잡한 UI 구조를 체계적으로 관리하고 일관된 사용자 경험을 제공하는 강력한 Vue Router 기능입니다.
+
+--> 이런식으로 해서 일일 뷰를 띄우면 되겠다. 모달창으로 말이야
 
 ## 10.6 명명된 라우트와 명명된 뷰
 
