--- a/_posts/2025-05-11-NESTED.md
+++ b/_posts/2025-05-11-NESTED.md
@@ -22,6 +22,8 @@ public class Main {
 }
 ```
 - **요약**: 중첩 클래스는 클래스 안에 정의된 클래스로, 바깥 클래스와 관련된 기능을 그룹화한다.
+Encapsulation 을 위해서 사용함 💊
+코드 깔끔하게 정리할 수 있음
 
 ---
 
@@ -86,6 +88,8 @@ public class Main {
 }
 ```
 - **요약**: 로컬 클래스는 메서드 내부에 정의되어 해당 메서드에서만 사용되는 클래스다.
+함수 실행이 종료되면 가비지 컬렉터가 데려감
+
 
 ---
 
